--- a/index.html
+++ b/index.html
@@ -9,6 +9,37 @@
     <link rel="stylesheet" href="reset.css">
 </head>
 <body>
-    <h1>AluraBook</h1>
+    <header class="cabecalho">
+        <div class="container">
+            <input type="checkbox" id="menu" class="container__botao">
+            <label for="menun">
+                <span   class="cabecalho__menu-hamburguer"></span>
+            </label>
+            <ul class="lista-menu">
+                <li class="lista-menu__titulo">Categorias</li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Programação</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Front-end</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Infraestrutura</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Business</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Desing & UX</a>
+                </li>
+            </ul>
+            <img src="imagens/Logo.svg" alt="Logo Alurabooks" class="container__imagem">
+        </div>
+        <div class="container">
+            <a href="#"><img src="imagens/Favoritos.svg" alt="Favoritos" class="container__imagem"></a>
+            <a href="#"><img src="imagens/Compras.svg" alt="Carrinhos de compras" class="container__imagem"></a>
+            <a href="#"><img src="imagens/Usuário.svg" alt="Meu perfil" class="container__imagem"></a>
+        </div>
+    </header>
 </body>
 </html>
