--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AluraBooks</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="reset.css">
 </head>
@@ -47,5 +48,40 @@
         <p class="banner__texto">Encontre em nossa estante o que precisa para seu desenvolvimento</p>
         <input type="search" class="banner__pesquisa" placeholder="Qual será sua proxima leitura?">
     </section>
+    <section class="carrossel">
+        <h2 class="carrossel__titulo">Novos lançamentos</h2>
+        <!-- Slider main container -->
+    <div class="swiper">
+        <!-- If we need pagination -->
+        <div class="swiper-pagination"></div>
+        <!-- Additional required wrapper -->
+        <div class="swiper-wrapper">
+        <!-- Slides -->
+        <div class="swiper-slide"><img src="imagens/Guia Front-end.svg" alt="Livro guia Front-End"></div>
+        <div class="swiper-slide"><img src="imagens/Acessibilidade.svg" alt="Livro Acessibilidade"></div>
+        <div class="swiper-slide"><img src="imagens/Liderança.svg" alt="Livro Liderança"></div>
+        <div class="swiper-slide"><img src="imagens/Gestão2.svg" alt="Livro Gestão 2"></div>
+        <div class="swiper-slide"><img src="imagens/Nodejs.svg" alt="Livro Nodejs"></div>
+        <div class="swiper-slide"><img src="imagens/Tuning.svg" alt="Livro Tuning"></div>
+        <div class="swiper-slide"><img src="imagens/Arquitetura.svg" alt="Livro Arquitetura"></div>
+        <div class="swiper-slide"><img src="imagens/ApacheKafka.svg" alt="Livro ApacheKafka"></div>
+        <div class="swiper-slide"><img src="imagens/Portugol.svg" alt="Livro Portugol"></div>
+        </div>
+        <!-- If we need navigation buttons -->
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
+    </div>
+    </section>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+    <script>
+        const swiper = new Swiper('.swiper', {
+            spaceBetween: 10,
+            slidesPerView: 3,
+            pagination: {
+                el: '.swiper-pagination',
+                type: 'bullets',
+            },
+        });
+    </script>
 </body>
 </html>
