--- a/index.html
+++ b/index.html
@@ -71,6 +71,60 @@
         <div class="swiper-button-prev"></div>
         <div class="swiper-button-next"></div>
     </div>
+    <div class="card">
+        <div class="card__descricao">
+            <div class="descricao">
+                <h3 class="descricao__titulo">Talvez você também se interesse por...</h3>
+                <h2 class="descricao__titulo-livro">Angular 11 e Firebase</h2>
+                <p class="descricao__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
+            </div>
+            <img src="imagens/logo_angular.svg" alt="logo angular 11" class="descricao__imagem">
+        </div>
+        <div class="card__botoes">
+            <ul class="botoes">
+                <li class="botoes__item"><img src="imagens/Favoritos.svg" alt="Favoritar Livro"></li>
+                <li class="botoes__item"><img src="imagens/Compras.svg" alt="Adicionar no carrinho"></li>
+            </ul>
+            <a href="#" class="botao__ancora">Saiba Mais</a>
+        </div>
+    </div>
+    </section>
+    <section class="carrossel">
+        <h2 class="carrossel__titulo">Mais Vendidos</h2>
+        <!-- Slider main container -->
+    <div class="swiper">
+        <!-- If we need pagination -->
+        <div class="swiper-pagination"></div>
+        <!-- Additional required wrapper -->
+        <div class="swiper-wrapper">
+        <!-- Slides -->
+        <div class="swiper-slide"><img src="imagens/ApacheKafka.svg" alt="Livro guia Front-End"></div>
+        <div class="swiper-slide"><img src="imagens/Guia Front-end.svg" alt="Livro Liderança"></div>
+        <div class="swiper-slide"><img src="imagens/Acessibilidade.svg" alt="Livro ApacheKafka"></div>
+        <div class="swiper-slide"><img src="imagens/Portugol.svg" alt="Livro Portugol"></div>
+        </div>
+        <!-- If we need navigation buttons -->
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
+    </div>
+    <div class="card">
+        <div class="card__descricao">
+            <div class="descricao">
+                <img src="imagens/" alt="estrelas de pontuação">
+                <h3 class="descricao__titulo">Autora do Mês</h3>
+                <h2 class="descricao__titulo-livro">Juliana Agarikov</h2>
+                <p class="descricao__texto">Analista de sistemas e escritora, Juliana é especialista em Front-End.</p>
+            </div>
+            <img src="imagens/" alt="foto da escritora do mês" class="descricao__imagem">
+        </div>
+        <div class="card__botoes">
+            <ul class="botoes">
+                <li class="botoes__item"><img src="imagens/Favoritos.svg" alt="Favoritar Livro"></li>
+                <li class="botoes__item"><img src="imagens/Compras.svg" alt="Adicionar no carrinho"></li>
+            </ul>
+            <a href="#" class="botao__ancora">Saiba Mais</a>
+        </div>
+    </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script>
