--- a/index.html
+++ b/index.html
@@ -110,12 +110,12 @@
     <div class="card">
         <div class="card__descricao">
             <div class="descricao">
-                <img src="imagens/" alt="estrelas de pontuação">
+                <img src="imagens/Estrelinhas.svg" alt="estrelas de pontuação">
                 <h3 class="descricao__titulo">Autora do Mês</h3>
                 <h2 class="descricao__titulo-livro">Juliana Agarikov</h2>
                 <p class="descricao__texto">Analista de sistemas e escritora, Juliana é especialista em Front-End.</p>
             </div>
-            <img src="imagens/" alt="foto da escritora do mês" class="descricao__imagem">
+            <img src="imagens/Perfil-escritora 1.svg" alt="foto da escritora do mês" class="descricao__imagem">
         </div>
         <div class="card__botoes">
             <ul class="botoes">
@@ -126,6 +126,43 @@
         </div>
     </div>
     </section>
+    <section class="topicos">
+        <h2 class="topicos__titulo">Tópicos visitados recentemente</h2>
+        <ul class="topicos__lista">
+            <li class="topicos__item">
+                <a href="#" class="topicos__link">Android</a>
+            </li>
+            <li class="topicos__item">
+                <a href="#" class="topicos__link">Marketing Digital</a>
+            </li>
+            <li class="topicos__item">
+                <a href="#" class="topicos__link">Agile</a>
+            </li>
+            <li class="topicos__item">
+                <a href="#" class="topicos__link">Startups</a>
+            </li>
+            <li class="topicos__item">
+                <a href="#" class="topicos__link">HTML & CSS</a>
+            </li>
+            <li class="topicos__item">
+                <a href="#" class="topicos__link">Phyton</a>
+            </li>
+            <li class="topicos__item">
+                <a href="#" class="topicos__link">OO</a>
+            </li>
+            <li class="topicos__item"><a href="#" class="topicos__link">Java</a>
+            </li>
+        </ul>
+    </section>
+    <section class="contato">
+        <h2 class="contato__titulo">Fique por dentro das novidades</h2>
+        <p class="contato__texto">Atualizações de e-books, novos livros, promoções e outros</p>
+        <input type="email" placeholder="Cadastre seu e-mail" class="contato__email">
+    </section>
+    <hr>
+    <footer class="rodape">
+        <h2 class="rodape__titulo">Grupo Alura</h2>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script>
         const swiper = new Swiper('.swiper', {
