--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </li>
         </ul>
         <div class="container">
-            <a href="#"><img src="imagens/Favoritos.svg" alt="Favoritos" class="container__imagem"></a>
+            <a href="#"><img src="imagens/Favoritos.svg" alt="Favoritos" class="container__imagem container__imagem--favoritos"></a>
             <a href="#"><img src="imagens/Compras.svg" alt="Carrinhos de compras" class="container__imagem"></a>
             <a href="#"><img src="imagens/Usuário.svg" alt="Meu perfil" class="container__imagem"></a>
         </div>
