--- a/index.html
+++ b/index.html
@@ -38,15 +38,35 @@
             <img src="imagens/Logo.svg" alt="Logo Alurabooks" class="container__imagem">
             <h1 class="container__titulo"><b class="container__titulo--negrito">Alura</b>Books</h1>
         </div>
-        <ul class="opcoes">
-            <li class="opcoes__item">Categorias</li>
+            <ul class="opcoes">
+            <input type="checkbox" id="opcoes-menu" class="opcoes__botao">
+            <label for="opcoes-menu">
+                <li class="opcoes__item">Categorias</li>
+            </label>
+            <ul class="lista-menu">
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Programação</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Front-end</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Infraestrutura</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Business</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Desing & UX</a>
+                </li>
+            </ul>
             <li class="opcoes__item">
                 <a href="#" class="opcoes__link">Favoritos</a>
             </li>
             <li class="opcoes__item">
                 <a href="#" class="opcoes__link">Minha Estante</a>
             </li>
-        </ul>
+            </ul>
         <div class="container">
             <a href="#"><img src="imagens/Favoritos.svg" alt="Favoritos" class="container__imagem container__imagem--favoritos"></a>
             <a href="#"><img src="imagens/Compras.svg" alt="Carrinhos de compras" class="container__imagem"></a>
@@ -165,8 +185,10 @@
         </ul>
     </section>
     <section class="contato">
-        <h2 class="contato__titulo">Fique por dentro das novidades</h2>
-        <p class="contato__texto">Atualizações de e-books, novos livros, promoções e outros</p>
+        <div class="contato__descricao">
+            <h2 class="contato__titulo">Fique por dentro das novidades</h2>
+            <p class="contato__texto">Atualizações de e-books, novos livros, promoções e outros</p>
+        </div>
         <input type="email" placeholder="Cadastre seu e-mail" class="contato__email">
     </section>
     <hr>
