--- a/index.html
+++ b/index.html
@@ -68,9 +68,17 @@
             </li>
             </ul>
         <div class="container">
-            <a href="#"><img src="imagens/Favoritos.svg" alt="Favoritos" class="container__imagem container__imagem--favoritos"></a>
-            <a href="#"><img src="imagens/Compras.svg" alt="Carrinhos de compras" class="container__imagem"></a>
-            <a href="#"><img src="imagens/Usuário.svg" alt="Meu perfil" class="container__imagem"></a>
+            <a href="#">
+                <img src="imagens/Favoritos.svg" alt="Favoritos" class="container__imagem container__imagem--favoritos">
+            </a>
+            <a href="#">
+                <img src="imagens/Compras.svg" alt="Carrinhos de compras" class="container__imagem">
+                <p class="container__texto">Minha Sacola</p>
+            </a>
+            <a href="#">
+                <img src="imagens/Usuário.svg" alt="Meu perfil" class="container__imagem">
+                <p class="container__texto">Meu perfil</p>
+            </a>
         </div>
     </header>
     <section class="banner">
@@ -194,6 +202,79 @@
     <hr>
     <footer class="rodape">
         <h2 class="rodape__titulo">Grupo Alura</h2>
+        <ul class="lista-rodape">
+            <li class="lista-rodape__titulo">Educação</li>
+            <li class="lista-rodape__item">
+                <img src="imagens/logos-rodape/logo-Caelum.svg" alt="Logo da caelum">
+                <a href="#" class="lista-rodape__link">Caelum</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="imagens/logos-rodape/logo-Casa.svg" alt="Logo da casa do código">
+                <a href="#" class="lista-rodape__link">Casa do Codigo</a>
+            </li>
+        </ul>
+        <ul class="lista-rodape">
+            <li class="lista-rodape__titulo">Educação Online</li>
+            <li class="lista-rodape__item">
+                <img src="imagens/logos-rodape/logo-Alura.svg" alt="Logo da alura">
+                <a href="#" class="lista-rodape__link">Alura</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="imagens/logos-rodape/logo-Alura-Empresas.svg" alt="Logo da Alura Empresas">
+                <a href="#" class="lista-rodape__link">Alura Empresa</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="imagens/logos-rodape/logo-Alura-Tam.svg" alt="Logo da Alura Latam">
+                <a href="#" class="lista-rodape__link">Alura LATAM</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="imagens/logos-rodape/logo-Alura-start.svg" alt="Logo da Alura Start">
+                <a href="#" class="lista-rodape__link">Alura Start</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="imagens/logos-rodape/logo-MusicDot.svg" alt="Logo da MusicDot">
+                <a href="#" class="lista-rodape__link">MusicDot</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="imagens/logos-rodape/logo-Alura-lingua.svg" alt="Logo da Alura Língua">
+                <a href="#" class="lista-rodape__link">Alura Lingua</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="imagens/logos-rodape/logo-PM3.svg" alt="Logo da PM3">
+                <a href="#" class="lista-rodape__link">PM3</a>
+            </li>
+        </ul>
+        <ul class="lista-rodape">
+            <li class="lista-rodape__titulo">Comunidade</li>
+            <li class="lista-rodape__item">
+                <img src="imagens/logos-rodape/logo-Hipster-Tech.svg" alt="Logo da Hipster Tech">
+                <a href="#" class="lista-rodape__link">Hipster ponto Tech</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="imagens/logos-rodape/logo-Scuba.svg" alt="Logo da Scupa">
+                <a href="#" class="lista-rodape__link">Scupa Dev</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="imagens/logos-rodape/logo-Layers.svg" alt="Logo da Layers">
+                <a href="#" class="lista-rodape__link">Layers ponto Tech</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="imagens/logos-rodape/logo-Like-Boss.svg" alt="Logo da Like a Boss">
+                <a href="#" class="lista-rodape__link">Like a Boss</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="imagens/logos-rodape/logo-Carreira.svg" alt="Logo da Carreira sem fronteiras">
+                <a href="#" class="lista-rodape__link">Carreira sem Fronteira</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="imagens/logos-rodape/logo-Hipster-Jobs.svg" alt="Logo da Hipsters ponto jobs">
+                <a href="#" class="lista-rodape__link">Hipters ponto Jobs</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="imagens/logos-rodape/logo-GUJ.svg" alt="Logo da GUJ">
+                <a href="#" class="lista-rodape__link">GUJ</a>
+            </li>
+        </ul>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script>
