--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
             <a href="#">
                 <img src="imagens/Favoritos.svg" alt="Favoritos" class="container__imagem container__imagem--favoritos">
             </a>
-            <a href="#">
+            <a href="#" class="container__link">
                 <img src="imagens/Compras.svg" alt="Carrinhos de compras" class="container__imagem">
                 <p class="container__texto">Minha Sacola</p>
             </a>
-            <a href="#">
+            <a href="#" class="container__link">
                 <img src="imagens/Usuário.svg" alt="Meu perfil" class="container__imagem">
                 <p class="container__texto">Meu perfil</p>
             </a>
